:construction: overflow-scroll + Materialize.collapsible correction  :mute: console.log

--- a/public/css/accordion.css
+++ b/public/css/accordion.css
@@ -6,6 +6,28 @@
 	border-image-slice: 0%;
 }
 
+.collapsible-first{
+	max-height: 40%;
+	overflow-y: auto;
+	overflow-x: hidden;
+}
+
+.bocket-scrollbar::-webkit-scrollbar-track{
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+
+.bocket-scrollbar::-webkit-scrollbar
+{
+	width: 6px;
+	background-color: #F5F5F5;
+}
+
+.bocket-scrollbar::-webkit-scrollbar-thumb
+{
+	background-color: #000000;
+}
+
 .collapsible{
 	box-shadow: none;
 }
